--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "import": "node ./dev-data/commands --import",
+    "clear": "node ./dev-data/commands --clear"
   },
   "keywords": [],
   "author": "",
